testsuite/tests/typecheck/should_fail/T16204c.stderr

T16204c.hs:16:8: error:
    • Couldn't match type ‘Rep’ with ‘*’
      Expected: Sing @(*) a
        Actual: Sing @Rep a0
    • In the first argument of ‘id’, namely ‘sTo’
      In the expression: id sTo
      In an equation for ‘x’: x = id sTo
